fixed issue with sticky nav bar overlaping opened hamburger menu, added fixed lower nav to desktop view

--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,8 @@ transition: all 0.3s ease;
   border-radius: 10px;
   cursor: pointer;
   position: fixed;
-  bottom: 50px;
-  right: 15px;
+  bottom: 60px;
+  right: 25px;
   background-color: #52a2da;
   text-align: center;
   text-decoration: none;
@@ -76,6 +76,85 @@ transition: all 0.3s ease;
   background: white;
 }
 
+/*lowernav starts*/
+#copyRight{
+  font-size: 12px;
+  color: white;
+  float:right;
+  line-height:50px;
+  padding: 0;
+}
+
+.social2 {
+  float: right;
+  width: 96px;
+  background-color: #2d2d2d;
+  margin-top: 13px;
+  margin-right: 30px;
+}
+
+.social2 img:hover{
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+#facebook{
+  width: 18px;
+}
+
+.social2 img{
+  margin-right: 7px;
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 25px;
+  cursor: pointer;
+  transition: opacity 0.2s ease-in;
+}
+
+.lowerNav{
+  /*position: absolute;*/
+  position: relative;
+  width: 960px;
+  height: 10px;
+  margin: 0 auto;
+
+}
+
+.lowerNav ul li{
+  display: inline;
+}
+
+
+.lowerNav ul li a{
+  font-size: 12px;
+  color: white;
+  display:inline-block;
+  height:15px;
+  line-height:50px;
+  margin:0px;
+  padding:0px 12px;
+  text-decoration:none;
+  transition: color 0.3s ease-in;
+  margin-bottom: 50px;
+}
+
+.lowerNav ul li a:hover{
+  color: #4487CC;
+}
+
+.navContainer{
+  position: fixed;
+  font-family:"Arial";
+  height:auto;
+  width:100%;
+  background-color: #2d2d2d;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+/*lowernav ends*/
+
 /*home screen Nav ends*/
 
 
@@ -96,6 +175,7 @@ transition: all 0.3s ease;
   color: white;
   margin-top: 50px;
 }
+
 
 .headerLogo{
   float: right;
@@ -456,6 +536,10 @@ body{
 
   /*copy rights ends*/
 
+  .navContainer{
+    display: none;
+  }
+
 
   /*home screen Nav starts*/
 
@@ -520,14 +604,14 @@ body{
 
 
     .sidenav {
+        z-index: 3;
         list-style-type: none;
         height: 100%;
         width: 0;
         position: fixed;
-        z-index: 1;
+        /*z-index: 1;*/
         top: 0;
         left: 0;
-        /*background-color: #4487CC;*/
         background-color: #2d2d2d;
         overflow-x: hidden;
         padding-top: 60px;
@@ -552,7 +636,6 @@ body{
     display: block;
     width: 119px;
     margin-top: 50px;
-
 
   }
 
